[project]
name = "ComfyUI-Woosh"
description = "ComfyUI custom nodes for Woosh Sound Effect Foundation Model by Sony AI — text-to-audio, video-to-audio generation"
version = "0.2.0"
license = {file = "LICENSE"}
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "torchdiffeq>=0.2",
    "timm>=1.0",
    "einops>=0.8",
    "av>=16.1",
    "torchvision",
    "huggingface_hub",
    "hear21passt==0.0.26",
]

[project.urls]
Repository = "https://github.com/Saganaki22/ComfyUI-Woosh"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "saganaki22"
DisplayName = "Woosh"
Icon = "https://avatars.githubusercontent.com/u/84208527"
